--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -85,7 +85,7 @@ add_component_dir (esmterrain
     )
 
 add_component_dir (misc
-    utf8stream stringops resourcehelpers rng messageformatparser
+    utf8stream stringops resourcehelpers rng messageformatparser log
     )
 
 IF(NOT WIN32 AND NOT APPLE)
