--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -140,13 +140,17 @@ add_component_dir (version
 add_component_dir (fallback
     fallback validate
     )
-    
+
 add_component_dir (client
     client clientoptions clienteventlisteners
     )
-    
+
 add_component_dir (server
     server serveroptions
+    )
+
+add_component_dir (logic
+    logiccommon gameobject gameobjecttypes physicscomponents physicsworld propertysets
     )
 
 set (ESM_UI ${CMAKE_SOURCE_DIR}/files/ui/contentselector.ui
